--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,14 @@
 {
+    "[python]": {
+        "editor.formatOnSave": true,
+        "editor.codeActionsOnSave": {
+        "source.fixAll": "explicit",
+        "source.organizeImports": "explicit"
+        },
+        "editor.defaultFormatter": "charliermarsh.ruff"
+    },
+    
     "python.pythonPath": "venv\\Scripts\\python.exe",
-    "editor.formatOnSave": true,
     "python.linting.enabled": true,
     "python.linting.lintOnSave": true,
     "python.linting.pylintEnabled": true,
@@ -8,8 +16,9 @@
     "python.linting.mypyEnabled": true,
     "python.formatting.provider": "autopep8",
     "files.associations": {
-        "**/*.html": "html",
+        "**/*.html": "django-html",
         "**/templates/**/*.html": "django-html",
+        "**/templates/**/*.css": "css",
         "**/templates/**/*": "django-txt",
         "**/requirements{/**,*}.{txt,in}": "pip-requirements"
     },
